syntax="proto3";

package push.meta;

option go_package="meta";

import "common.proto";

service Gate{
	rpc Push(GatePushRequest)returns (GatePushResponse);
	rpc PushAll(GatePushAllRequest)returns (GatePushAllResponse);
}

message GatePushRequest{
	RequestHeader header = 1;
	string AppId = 2;
	string ClientId = 3;
	uint32 PacketId = 4;
	string Content = 5;
	int32 Kind = 6;
	string Extra = 7;
}

message GatePushResponse{
	ResponseHeader header = 1;
}

message GatePushAllRequest{
	RequestHeader header = 1;
	string AppId = 2;
	uint32 PacketId = 3;
	string Content = 4;
	int32 Kind = 5;
	string Extra = 6;
}

message GatePushAllResponse{
	ResponseHeader header = 1;
}
